objects/LAT_Solution__c.object
<CustomObject>
    <fields>
        <fullName>LAT_ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LAT_IsAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is  Admin?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_IsPublishedInPublicKb__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Visible in Public Knowledge Base</description>
        <label>Visible in Public Knowledge Base</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_IsPublished__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is published?</description>
        <label>Is published?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_SolutionName__c</fullName>
        <description>Solution Title</description>
        <label>Solution Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_SolutionNote__c</fullName>
        <description>Solution Details</description>
        <label>Solution Details</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LAT_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rascunho</fullName>
                    <default>true</default>
                    <label>Rascunho</label>
                </value>
                <value>
                    <fullName>Revisado</fullName>
                </value>
                <value>
                    <fullName>Duplicado</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>LAT Solution</label>
    <listViews>
        <fullName>AllReviewedSolutions</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_Status__c</field>
            <operation>equals</operation>
            <value>Reviewed</value>
        </filters>
        <label>All Reviewed Solutions</label>
    </listViews>
    <listViews>
        <fullName>AllUnreviewedSolutions</fullName>
        <columns>LAT_SolutionName__c</columns>
        <columns>NAME</columns>
        <columns>LAT_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_Status__c</field>
            <operation>notEqual</operation>
            <value>Reviewed</value>
        </filters>
        <label>All Unreviewed Solutions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>LAT Solution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LAT Solutions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>